--- a/build.gradle
+++ b/build.gradle
@@ -20,16 +20,22 @@ subprojects {
 
     dependencies {
         implementation "org.springframework:spring-context:$springVersion"
+        implementation "org.springframework.boot:spring-boot-starter-data-jpa:2.7.7"
         implementation "org.aspectj:aspectjrt:$aspectjVersion"
         implementation "org.aspectj:aspectjweaver:$aspectjWeaverVersion"
+        implementation "org.postgresql:postgresql:42.2.20"
+        implementation "com.h2database:h2:2.1.214"
+        implementation "javax.xml.bind:jaxb-api:2.3.1"
 
         compileOnly "org.projectlombok:lombok:$lombokVersion"
         annotationProcessor "org.projectlombok:lombok:$lombokVersion"
 
+        implementation "com.h2database:h2:$h2Version"
+
         testImplementation "org.springframework:spring-test:$springVersion"
         testImplementation "org.junit.jupiter:junit-jupiter-api:$jupiterVersion"
         testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:$jupiterVersion"
-        testImplementation "com.tngtech.archunit:archunit:$archUnitVersion"
+        testImplementation "com.tngtech.archunit:archunit-junit5:1.0.0"
 
         annotationProcessor "org.mapstruct:mapstruct-processor:$mapstructVersion"
         implementation "org.mapstruct:mapstruct:$mapstructVersion"
